# mv_model

./: README.md  main.py  setup.cfg
examples/: mv_example.ipynb  run_model_example.py  utils.py
examples/figs/: ap.html
mv_model/: model.py  mv_model.py  utils.py
