[metadata]
name = mv_model
version = 0.0.0
description = Minimal Model for Human Ventricular Action Potential
long_description = file: README.md
url = https://github.com/caledezma/mv_model
author = Carlos Ledezma

[options]
python_requires= >=3.8
packages = find:
include_package_data=True
install_requires =
  click
  matplotlib
  numpy
  scipy
  tqdm
